@@ -1,0 +1,97 @@
+# Copyright (C) 2008 Canonical Ltd
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+
+"""Repository implementation tests for external reference repositories.
+
+These test the conformance of repositories which refer to other repositories
+for some data.
+"""
+
+from bzrlib import (
+    repository,
+    remote,
+    )
+from bzrlib.bzrdir import BzrDir
+from bzrlib.tests import (
+                          adapt_modules,
+                          adapt_tests,
+                          TestScenarioApplier,
+                          TestSuite,
+                          )
+from bzrlib.tests.repository_implementations import (
+    all_repository_format_scenarios,
+    TestCaseWithRepository,
+    )
+
+
+class TestCaseWithExternalReferenceRepository(TestCaseWithRepository):
+
+    def make_referring(self, relpath, target_path):
+        """Get a new repository that refers to a_repository.
+        
+        :param relpath: The path to create the repository at.
+        :param a_repository: A repository to refer to.
+        """
+        repo = self.make_repository(relpath)
+        repo.add_fallback_repository(self.readonly_repository(target_path))
+        return repo
+
+    def readonly_repository(self, relpath):
+        return BzrDir.open_from_transport(
+            self.get_readonly_transport(relpath)).open_repository()
+
+
+class TestCorrectFormat(TestCaseWithExternalReferenceRepository):
+
+    def test_repository_format(self):
+        # make sure the repository on tree.branch is of the desired format,
+        # because developers use this api to setup the tree, branch and 
+        # repository for their tests: having it not give the right repository
+        # type would invalidate the tests.
+        self.make_branch_and_tree('repo')
+        repo = self.make_referring('referring', 'repo')
+        self.assertIsInstance(repo._format,
+            self.repository_format.__class__)
+
+
+def load_tests(standard_tests, module, loader):
+    # format_scenarios is all the implementations of Repository; i.e. all disk
+    # formats plus RemoteRepository.
+    adapter = TestScenarioApplier()
+    scenarios = all_repository_format_scenarios()
+    adapter.scenarios = []
+    for scenario in scenarios:
+        format = scenario[1]['repository_format']
+        # For remote repositories, we need at least one external reference
+        # capable format to test it: defer this until landing such a format.
+        # if isinstance(format, remote.RemoteRepositoryFormat):
+        #     scenario[1]['bzrdir_format'].repository_format = 
+        if format.supports_external_lookups:
+            adapter.scenarios.append(scenario)
+
+    prefix = module.__name__ + '.test_'
+    test_repository_modules = [
+        'add_inventory',
+        ]
+    module_name_list = [prefix + module_name
+        for module_name in test_repository_modules]
+
+    # Parameterize repository_implementations test modules by format.
+    result = TestSuite()
+    adapt_tests(standard_tests, adapter, result)
+    adapt_modules(module_name_list, adapter, loader, result)
+    return result
